fixed usernames not being displayed on small mobile

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -465,7 +465,7 @@ min-width: 150px;
 min-width: 150px;
 }
 
-.tagline {
+.link .tagline {
     display:none;
 }
 
